header maquetado y con estilos

--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <title>404 Not Found</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <header class="header">
+        <p class="header__logo">404 NOT FOUND</p>
+      </header>
+    </div>
+  </body>
 </html>
