Main maquetado y con estilos

--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
       <header class="header">
         <p class="header__logo">404 NOT FOUND</p>
       </header>
+      <main class="main">
+        <figure class="main__figure">
+          <img src="./assets/Scarecrow.png" alt="404 Scarecrow" />
+        </figure>
+        <section class="main__texts">
+          <h1>I have bad news for you</h1>
+          <p>
+            The page you are looking for might be removed or os temporarily
+            unavailable
+          </p>
+          <button>BACK TO HOMEPAGE</button>
+        </section>
+      </main>
     </div>
   </body>
 </html>
