Footer maquetado y con estilos terminado

--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
           <button>BACK TO HOMEPAGE</button>
         </section>
       </main>
+      <footer class="footer">
+        <p>
+          created by
+          <a target="_blank" href="https://twitter.com/dcuevasr24"
+            >Daniel Cuevas</a
+          >
+          - devChallenges.io
+        </p>
+      </footer>
     </div>
   </body>
 </html>
